<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authenticatorActivityLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.lnikkila.oidcsample.oidc.authenticator.OIDCClientConfigurationActivity">
    <ScrollView
        android:id="@+id/clientFormLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/useOauth2Switch"
                android:theme="@style/Theme.OidcLib.Switch"
                android:text="@string/OIDCuserOAuth2OptionHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/clientIdInputLayout"
                app:hintTextAppearance="@style/Theme.OidcLib.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lnikkila.oidc.minsdkcompat.CompatEditText
                    android:id="@+id/clientIdEditText"
                    android:theme="@style/Theme.OidcLib.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/OIDCClientIdOptionHint"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/clientSecretInputLayout"
                app:hintTextAppearance="@style/Theme.OidcLib.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lnikkila.oidc.minsdkcompat.CompatEditText
                    android:id="@+id/clientSecretEditText"
                    android:theme="@style/Theme.OidcLib.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/OIDCSecretOptionHint"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/redirectUriInputLayout"
                app:hintTextAppearance="@style/Theme.OidcLib.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lnikkila.oidc.minsdkcompat.CompatEditText
                    android:id="@+id/redirectUriEditText"
                    android:theme="@style/Theme.OidcLib.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:hint="@string/OIDCRedirectOptionHint"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/issuerInputLayout"
                app:hintTextAppearance="@style/Theme.OidcLib.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lnikkila.oidc.minsdkcompat.CompatEditText
                    android:id="@+id/issuerEditText"
                    android:theme="@style/Theme.OidcLib.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:hint="@string/OIDCIssuerOptionHint"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/scopesInputLayout"
                app:hintTextAppearance="@style/Theme.OidcLib.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lnikkila.oidc.minsdkcompat.CompatEditText
                    android:id="@+id/scopesEditText"
                    android:theme="@style/Theme.OidcLib.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/OIDCScopesOptionHint"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/flowTypeSpinner"
                android:theme="@style/Theme.OidcLib.SpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:spinnerMode="dialog"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/setOIDCClientButton"
                android:theme="@style/Theme.OidcLib.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OIDCSetOptionsButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>